[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "gossip-sim"
description = "Blockchain, Rebuilt for Scale"
version = "1.12.0"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/"
default-run = "gossip-sim"

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
indicatif = "0.16.2"
log = "0.4.17"
num_cpus = "1.13.1"
rand = "0.7.0"
serde = "1.0.137"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
solana-clap-utils = { workspace = true }
solana-client = { workspace = true }
solana-core = { workspace = true }
solana-entry = { workspace = true }
solana-genesis = { workspace = true }
solana-genesis-utils = { workspace = true }
solana-gossip = { workspace = true }
solana-ledger = { workspace = true }
solana-logger = { workspace = true }
solana-metrics = { workspace = true }
solana-net-utils = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
solana-version = { workspace = true }
tempfile = "3.3.0"
symlink = "0.1.0"
csv = "1.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }

[target."cfg(unix)".dependencies]
libc = "0.2.126"
signal-hook = "0.3.14"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
